[tool.poetry]
name = "ashrae_energy_prediction"
version = "0.1.0"
description = ""
authors = ["akurzela"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.2"
numpy = "^1.17.3"
matplotlib = "^3.1.1"
kaggle = "^1.5.6"
scikit-learn = "^0.21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
